<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android_Dev_Assignment_2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblAppTitle">Use this camera app to take pictures!</string>
    <string name="lblTitle">Use this app to take pictures and rate them!</string>
    <string name="lblCamerabtn">Camera</string>
    <string name="lblGallerybtn">Gallery</string>
    <string name="title_activity_image_information">ImageInformationActivity</string>
    <string name="lblImageWidth">Width</string>
    <string name="lblImageHeight">Height</string>
    <string name="lblImageSize">Size in Bytes</string>
    <string name="lblImageLocation">File Location</string>
    <string name="lblImageRating">Do you like this image?</string>
    <string name="lblClose">Close</string>
    <string name="lblImageWidthValue">Width</string>
    <string name="lblHeightValue">Height</string>
    <string name="lblImageSizeValue">Size</string>
    <string name="lblLocationValue">Location</string>
    <string name="lblBack">Back</string>
    <string name="unable_to_open_image_">Unable to open image.</string>
    <string name="_pixels">" pixels"</string>
    <string name="_bytes">" bytes"</string>
    <string name="you_gave_a_">"You gave a "</string>
    <string name="_out_of_5_stars">" out of 5 Stars"</string>
    <string name="glad_you_liked_it_">Glad you liked it!</string>

</resources>
