<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImageCaptureActivity" >

    <TextView
        android:id="@+id/lblAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="53dp"
        android:gravity="center_horizontal"
        android:text="@string/lblTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnLaunchGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLaunchCamera"
        android:layout_alignBottom="@+id/btnLaunchCamera"
        android:layout_alignRight="@+id/lblAppTitle"
        android:layout_marginRight="39dp"
        android:gravity="center_vertical|center_horizontal|start"
        android:onClick="onBtnLaunchGalleryClicked"
        android:text="@string/lblGallerybtn" />

    <Button
        android:id="@+id/btnLaunchCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAppTitle"
        android:layout_below="@+id/lblAppTitle"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="56dp"
        android:gravity="center_vertical|center_horizontal|start"
        android:onClick="onLaunchCameraClicked"
        android:text="@string/lblCamerabtn" />

</RelativeLayout>
